dotfiles/files/openshift/calibre-web/calibre-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\delaport\go\bin\kompose.exe convert
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: calibre-web
  name: calibre-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: calibre-web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\delaport\go\bin\kompose.exe convert
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/calibre-web-default: "true"
        io.kompose.service: calibre-web
    spec:
      containers:
        - env:
            - name: DOCKER_MODS
              value: linuxserver/mods:universal-calibre
            - name: OAUTHLIB_RELAX_TOKEN_SCOPE
              value: "1"
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/calibre-web:latest
          name: calibre-web
          ports:
            - containerPort: 8083
              hostPort: 8083
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: calibre-web-claim0
            - mountPath: /books
              name: calibre-web-claim1
      restartPolicy: Always
      volumes:
        - name: calibre-web-claim0
          persistentVolumeClaim:
            claimName: calibre-web-claim0
        - name: calibre-web-claim1
          persistentVolumeClaim:
            claimName: calibre-web-claim1
status: {}
