dotfiles/files/openshift/calibre-web/calibre-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\delaport\go\bin\kompose.exe convert
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: calibre-web
  name: calibre-web
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    io.kompose.service: calibre-web
status:
  loadBalancer: {}
